--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,18 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   pull_to_refresh_flutter3: ^2.0.1
+  provider: ^6.0.5
+  http: ^0.13.5
+
+  # api_module:
+  #   git:
+  #     url: git@github.com:SegurosUniversales/mobile-module-api.git 
+  #     ref: main
+
+  api_module:
+    path: D:/GitHub/module-api-manager
+  flutter_secure_storage: ^8.0.0
+
 
 dev_dependencies:
   flutter_test:
